fix errorprone and checkstyle warnings; resolves #224